--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,70 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Big Shoulders Stencil Display", cursive;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-}
-
-nav {
-  background-color: #001058;
+@media only screen and (min-width: 1024px) {
+  .nav {
+    background-color: #08162B;
+  }
 }
 
 .contenedor_logo {
   display: flex;
   flex-direction: row;
+  background-color: #08162B;
 }
 
 .logo {
   text-decoration: none;
-  font-size: 20px;
+  font-size: 50px;
   margin: 10px 0;
   font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50%;
-  color: #fffb00;
+  width: 100%;
+  color: white;
 }
 
 .hamburguesa {
+  position: absolute;
   font-size: 20px;
   color: white;
   display: flex;
-  width: 50%;
-  align-items: center;
-  justify-content: center;
+  left: 20px;
+  top: 30px;
 }
 
 .contenedor_menu-sociales {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  background-color: #ffffff8f;
+  background-color: black;
+}
+
+.close {
+  color: white;
+  font-size: 50px;
+  display: block;
+  text-align: right;
+  padding: 15px;
 }
 
 .opciones_menu {
-  display: block;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  text-align: center;
+  margin-top: 50px;
+  align-items: center;
   list-style: none;
   padding: 0;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: 600;
 }
 .opciones_menu li {
@@ -60,10 +72,11 @@ nav {
 }
 .opciones_menu a {
   text-decoration: none;
-  color: #001058;
+  color: white;
 }
 
 .opciones_social {
+  margin: 0;
   display: flex;
   width: 100%;
   list-style: none;
@@ -75,7 +88,17 @@ nav {
   margin: 0 20px;
 }
 .opciones_social a {
-  color: #001058;
+  color: white;
+}
+
+.sub_logo {
+  color: white;
+  font-size: 50px;
+  display: block;
+  margin: 20px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
