--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -1,31 +1,26 @@
-@mixin small_phone{
-    @media only screen and (max-width: 320px) {
-        @content;
-    }
-}
-
-@mixin mid_phone{
-    @media only screen and (min-width: 320px) {
-        @content;
-    }
-}
-@mixin large_phone{
-    @media only screen and (min-width: 480px) {
-        @content;
-    }
-}
-@mixin tablet{
-    @media only screen and (min-width: 768px) {
-        @content;
-    }
-}
-@mixin laptop{
-    @media only screen and (min-width: 1024px) {
-        @content;
-    }
-}
-@mixin hd{
-    @media only screen and (min-width: 1366px) {
-        @content;
-    }
-}
+@mixin for-small-mobile {
+    @media (max-width: 320px) and (min-width: 375px) { @content; }
+  }
+  @mixin for-medium-mobile {
+    @media (min-width: 375px) { @content; }
+  }
+  
+  @mixin for-large-mobile{
+    @media (min-width: 426px) { @content; }
+  }
+  
+  @mixin for-tablet{
+    @media (min-width: 768px) { @content; }
+  }
+  
+  @mixin for-laptop{
+    @media (min-width: 1024px) { @content; }
+  }
+  
+  @mixin for-large-laptop{
+    @media (min-width: 1440px) { @content; }
+  }
+  
+  @mixin for-4k-laptop{
+    @media (min-width: 2560px) { @content; }
+  }
