--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,17 @@ body {
   font-family: "Big Shoulders Stencil Display", cursive;
 }
 
-@media (min-width: 1024px) {
-  .nav {
-    background-color: #08162B;
+/* .nav {     
+  @include for-laptop{
+    background-color: $azul;
+    display: grid;
+    grid-template-columns: 2fr 6fr 2fr;
   }
 }
-
-.contenedor_logo {
-  display: flex;
-  flex-direction: row;
-  background-color: #08162B;
+.contenedor_logo{
+    display: flex;
+    flex-direction: row;
+    background-color: $azul;
 }
 
 .logo {
@@ -26,60 +27,60 @@ body {
   justify-content: center;
   width: 100%;
   color: white;
-}
-@media (min-width: 1024px) {
-  .logo {
+
+  @include for-laptop{
     justify-content: right;
     font-size: 70px;
   }
 }
 
-.hamburguesa {
+.hamburguesa{
   position: absolute;
   font-size: 20px;
   color: white;
   display: flex;
   left: 20px;
   top: 30px;
-}
-@media (min-width: 768px) {
-  .hamburguesa {
+
+  @include for-tablet{
     left: 50px;
   }
-}
-@media (min-width: 1024px) {
-  .hamburguesa {
+
+  @include for-laptop{
     font-size: 30px;
   }
 }
 
-.opciones_menu_laptop {
+.opciones_menu_laptop{
   list-style: none;
   display: flex;
   align-items: center;
   padding: 0;
   padding: 0 50px;
-}
-.opciones_menu_laptop li {
-  padding: 0 20px;
-}
-.opciones_menu_laptop a {
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: 700;
-  color: white;
-}
-.opciones_menu_laptop button {
-  width: 70px;
-  height: 30px;
-  background-color: #F29494;
-  color: white;
-  border: 0px solid;
-  font-size: 12px;
-  font-weight: 800;
+
+  li{
+    padding: 0 20px;
+  }
+
+  a{
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+  }
+
+  button{
+    width: 70px;
+    height: 30px;
+    background-color: $boton;
+    color: white;
+    border: 0px solid;
+    font-size: 12px;
+    font-weight: 800;
+  }
 }
 
-.contenedor_menu-sociales {
+.contenedor_menu-sociales{
   position: absolute;
   top: 0;
   width: 100%;
@@ -87,15 +88,14 @@ body {
   display: flex;
   flex-direction: column;
   background-color: black;
-}
-@media (min-width: 1024px) {
-  .contenedor_menu-sociales {
+
+  @include for-laptop{
     width: 30%;
     display: none;
   }
 }
 
-.close {
+.close{
   color: white;
   font-size: 50px;
   display: block;
@@ -103,7 +103,7 @@ body {
   padding: 15px;
 }
 
-.opciones_menu {
+.opciones_menu{
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -114,16 +114,18 @@ body {
   padding: 0;
   font-size: 30px;
   font-weight: 600;
-}
-.opciones_menu li {
-  padding: 20px 0;
-}
-.opciones_menu a {
-  text-decoration: none;
-  color: white;
+
+  li{
+      padding: 20px 0;
+  }
+
+  a{
+      text-decoration: none;
+      color: white;
+  }
 }
 
-.opciones_social {
+.opciones_social{
   margin: 0;
   display: flex;
   width: 100%;
@@ -131,15 +133,17 @@ body {
   font-size: 20px;
   padding: 0;
   justify-content: center;
-}
-.opciones_social li {
-  margin: 0 20px;
-}
-.opciones_social a {
-  color: white;
+
+  li{
+      margin: 0 20px;
+  }
+
+  a{
+      color: white;
+  }
 }
 
-.sub_logo {
+.sub_logo{
   color: white;
   font-size: 50px;
   display: block;
@@ -147,6 +151,12 @@ body {
   position: absolute;
   right: 0;
   bottom: 0;
+
+} */
+nav {
+  display: grid;
+  grid-template-columns: 40% 20% 40%;
+  background-color: #08162B;
 }
 
 /*# sourceMappingURL=style.css.map */
