--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -1,155 +1,65 @@
-/* .nav {     
-  @include for-laptop{
-    background-color: $azul;
+nav{
+
+  @include for-small-mobile{
     display: grid;
-    grid-template-columns: 2fr 6fr 2fr;
-  }
-}
-.contenedor_logo{
-    display: flex;
-    flex-direction: row;
+    grid-template-columns: 40% 60%;
     background-color: $azul;
-}
-
-.logo {
-  text-decoration: none;
-  font-size: 50px;
-  margin: 10px 0;
-  font-weight: 600;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  color: white;
-
-  @include for-laptop{
-    justify-content: right;
-    font-size: 70px;
-  }
-}
-
-.hamburguesa{
-  position: absolute;
-  font-size: 20px;
-  color: white;
-  display: flex;
-  left: 20px;
-  top: 30px;
-
-  @include for-tablet{
-    left: 50px;
   }
 
   @include for-laptop{
-    font-size: 30px;
-  }
-}
-
-.opciones_menu_laptop{
-  list-style: none;
-  display: flex;
-  align-items: center;
-  padding: 0;
-  padding: 0 50px;
-
-  li{
-    padding: 0 20px;
+    display: grid;
+    grid-template-columns: 40% 20% 40%;
+    background-color: $azul;
   }
   
-  a{
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: 700;
-    color: white;
-  }
-
-  button{
-    width: 70px;
-    height: 30px;
-    background-color: $boton;
-    color: white;
-    border: 0px solid;
-    font-size: 12px;
-    font-weight: 800;
-  }
 }
 
-.contenedor_menu-sociales{
+.contenedor_menu{
+  position: absolute;
   position: absolute;
   top: 0;
   width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: black;
-  
-  @include for-laptop{
-    width: 30%;
-    display: none;
-  }
-}
-
-.close{
-  color: white;
-  font-size: 50px;
-  display: block;
-  text-align: right;
-  padding: 15px;
-}
-
-.opciones_menu{
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin-top: 50px;
-  align-items: center;
-  list-style: none;
-  padding: 0;
-  font-size: 30px;
-  font-weight: 600;
-
-  li{
-      padding: 20px 0;
-  }
-
-  a{
-      text-decoration: none;
-      color: white;
-  }
-}
-
-.opciones_social{
-  margin: 0;
-  display: flex;
-  width: 100%;
-  list-style: none;
-  font-size: 20px;
-  padding: 0;
-  justify-content: center;
-
-  li{
-      margin: 0 20px;
-  }
-
-  a{
-      color: white;
-  }
-}
-
-.sub_logo{
-  color: white;
-  font-size: 50px;
-  display: block;
-  margin: 20px;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  
-} */
-
-nav{
   display: grid;
-  grid-template-columns: 40% 20% 40%;
-  background-color: $azul;
+  grid-template-columns: 20% 60% 20%;
+  
+}
+
+.menu{
+
+  @include for-small-mobile{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    
+  }
+
+  @include for-laptop{
+    display: flex;
+    list-style: none;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.item_menu{
+
+  @include for-small-mobile{
+    a{
+      color: white;
+      text-decoration: none;
+    }
+  }
+
+  @include for-laptop{
+    padding: 10px;
+
+      a{
+        text-decoration: none;
+        color: white;
+        font-size: 20px;
+      }
+  }
+  
 }
