--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -1,56 +1,103 @@
 nav{
 
-  @include for-small-mobile{
-    display: grid;
-    grid-template-columns: 40% 60%;
-    background-color: $azul;
-  }
+  display: grid;
+  grid-template-columns: 30% 70%;
+  background-color: $azul;
 
   @include for-laptop{
     display: grid;
-    grid-template-columns: 40% 20% 40%;
+    grid-template-columns: 30% 40% 30%;
     background-color: $azul;
   }
   
+}
+
+.icon_menu{
+  color: white;
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+  align-content: center;
+  padding: 10px;
+
+  @include for-laptop{
+    display: none;
+  }
+}
+
+.logo{
+  color: white;
+  font-size: 40px;
+  text-decoration: none;
+  text-align: center;
+  justify-content: center;
+  padding: 5px;
+
+  @include for-laptop{
+    font-size: 60px;
+  }
 }
 
 .contenedor_menu{
   position: absolute;
-  position: absolute;
   top: 0;
   width: 100%;
-  display: grid;
-  grid-template-columns: 20% 60% 20%;
-  
+  height: 100%;
+  background-color: black;
+
+  @include for-tablet{
+    width: 30%;
+  }
+
+  @include for-laptop{
+    position: relative;
+    background-color: $azul;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
 }
 
 .menu{
 
-  @include for-small-mobile{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    background-color: black;
-    
-  }
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
+  margin-top: 10%;
 
   @include for-laptop{
     display: flex;
+    flex-direction: row;
     list-style: none;
     align-items: center;
     justify-content: center;
+    align-items: center;
+    margin: 0;
+  }
+}
+
+.icon_menu_out{
+  color: white;
+  display: block;
+  text-align: end;
+  padding: 20px;
+  font-size: 30px;
+
+  @include for-laptop{
+    display: none;
   }
 }
 
 .item_menu{
 
-  @include for-small-mobile{
+    padding: 10px;
     a{
       color: white;
       text-decoration: none;
+      font-size: 30px;
     }
-  }
 
   @include for-laptop{
     padding: 10px;
@@ -62,4 +109,42 @@ nav{
       }
   }
   
+}
+
+.boton_compra{
+  display: none;
+
+  @include for-laptop{
+    background-color: $boton;
+    color: white;
+    border-style: none;
+    border-radius: 0;
+    padding: 10px;
+    display: block;
+  }
+}
+
+.sub_logo{
+  color: white;
+  padding: 20px;
+  font-size: 50px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+
+  @include for-laptop{
+    display: none;
+  }
+}
+
+.accion{
+  display: flex;
+  justify-content: center;
+
+  a{
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    color: white;
+  }
 }
