--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ nav {
   width: 100%;
   height: 100%;
   background-color: black;
+  display: none;
 }
 @media (min-width: 768px) {
   .contenedor_menu {
@@ -150,11 +151,35 @@ nav {
 .accion {
   display: flex;
   justify-content: center;
+  display: none;
+}
+@media (min-width: 1024px) {
+  .accion {
+    display: flex;
+  }
 }
 .accion a {
   display: flex;
   align-items: center;
   padding: 20px;
+  color: white;
+}
+
+.sub_accion {
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+}
+@media (min-width: 1024px) {
+  .sub_accion {
+    display: none;
+  }
+}
+.sub_accion a {
+  display: flex;
+  align-items: center;
+  font-size: 30px;
+  padding: 30px;
   color: white;
 }
 
