--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -44,6 +44,7 @@ nav{
   width: 100%;
   height: 100%;
   background-color: black;
+  display: none;
 
   @include for-tablet{
     width: 30%;
@@ -140,11 +141,34 @@ nav{
 .accion{
   display: flex;
   justify-content: center;
+  display: none;
+
+  @include for-laptop{
+    display: flex;
+  }
 
   a{
     display: flex;
     align-items: center;
     padding: 20px;
+    color: white;
+  }
+}
+
+.sub_accion{
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+
+  @include for-laptop{
+    display: none;
+  }
+
+  a{
+    display: flex;
+    align-items: center;
+    font-size: 30px;
+    padding: 30px;
     color: white;
   }
 }
